att e-mail e linkdin

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>HUMANIZE CONSULTORIA | PORTFÓLIO</title>
+    <title>HUMANIZE CONSULTORIA</title>
     <meta name="description" content="Currículo Web, onde contém informações iniciais sobre meu perfil profissional e alguns trabalhos realizados, formações acadêmicas, referência, meios de me contatar e consegue realizar também o download do meu currículo em arquivo."/>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
@@ -48,7 +48,7 @@
       </div>
       <div class="section">
         <div class="container">
-          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" target="_blank" href="https://www.linkedin.com/in/gabrielfsousa/" rel="tooltip" title="" data-original-title="Me adicione no LinkedIn"><i class="fa fa-linkedin"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" target="_blank" href="https://www.instagram.com/humanize.rh_/" rel="tooltip" title="Me adicione no Instagram"><i class="fa fa-instagram"></i></a></div>
+          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" target="_blank" href="https://www.linkedin.com" rel="tooltip" title="" data-original-title="Me adicione no LinkedIn"><i class="fa fa-linkedin"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" target="_blank" href="https://www.instagram.com/humanize.rh_/" rel="tooltip" title="Me adicione no Instagram"><i class="fa fa-instagram"></i></a></div>
         </div>
       </div>
     </div>
@@ -334,7 +334,7 @@
                     <p class="mb-0"><strong>Telefone</strong></p>
                     <p class="pb-2">(11)96068-7297 / (11)95455-1213</p>
                     <p class="mb-0"><strong>Email</strong></p>
-                    <p>humanizeconsultoria@outlook.com</p>
+                    <p>humanizeconsulting@gmail.com</p>
                   </div>
                 </div>
               </div>
@@ -347,7 +347,7 @@
 </div></div>
     </div>
     <footer class="footer">
-      <div class="container text-center"><a class="cc-linkedin btn btn-link" target="_blank"  href="https://www.linkedin.com/in/gabrielfsousa/"><i class="fa fa-linkedin fa-2x " aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" target="_blank" href="https://www.instagram.com/humanize.rh_/"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
+      <div class="container text-center"><a class="cc-linkedin btn btn-link" target="_blank"  href="https://www.linkedin.com"><i class="fa fa-linkedin fa-2x " aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" target="_blank" href="https://www.instagram.com/humanize.rh_/"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
       <div class="h4 title text-center">HUMANIZE CONSULTORIA</div>
       <div class="text-center text-muted">
        
